--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acctivate</title>
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
 
@@ -28,11 +29,25 @@
         </form>
     </div>
 
+    <div class="tech-stack hidden">
+        <div class="head">
+            <p>Tech Stack</p>
+            <img src="https://image.flaticon.com/icons/png/512/1828/1828778.png" width="12px" class="close">
+            <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
+        </div>
+
+        <div class="logo">
+            <img src="https://i.imgur.com/nYUwci7.jpg" alt="Javascript">
+            <img src="https://i.imgur.com/AvoEJhZ.png" alt="Node.js">
+            <img src="https://i.imgur.com/vHELOY7.png" alt="Webpack.js">
+        </div>
+    </div>
+
     <main>
         <header class="container">
             <h1>Acctivate</h1>
 
-            <p class="made">Made for Account Management</p>
+            <a href="#" class="stack">What Stack ?</a>
         </header>
 
         <section class="account container">
@@ -50,6 +65,7 @@
                         <td>Account</td>
                         <td>Name</td>
                         <td>Status</td>
+                        <td>Active Period</td>
                         <td>Active From</td>
                         <td>Expired</td>
                         <td>Action</td>
@@ -78,6 +94,8 @@
                     </tr> -->
                 </tbody>
             </table>
+
+            <p class="empty-info">Belum ada Data ...</p>
 
         </section>
     </main>
