now you can select date

--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,13 @@
             <input type="text" placeholder="E.g Netflix Premium" id="account" required>
 
             <label for="name">Owner Name</label>
-            <input type="text" placeholder="E.g John Nefl" id="name" required >
+            <input type="text" placeholder="E.g Jason" id="name" required >
 
             <label for="active-period">Active Period</label>
             <input type="number" placeholder="E.g 30 / 60 / 90" id="active-period" required>
+
+            <label for="active-from">Active From</label>
+            <input type="date" id="active-from">
 
             <div class="buttons">
                 <button>Save</button>
