--- a/public/index.html
+++ b/public/index.html
@@ -17,25 +17,25 @@
             <label for="account">Account Name</label>
             <div class="account">
                 <input type="text" placeholder="E.g Netflix Premium" id="account" required>
-                <div class="reset reset-account disabled">
+                <button class="reset reset-account disabled" disabled>
                     <img src="https://image.flaticon.com/icons/png/512/1828/1828778.png" width="11px">
-                </div>
+                </button>
             </div>
 
             <label for="name">Owner Name</label>
             <div class="owner-name">
                 <input type="text" placeholder="E.g Jason" id="name" required >
-                <div class="reset reset-name disabled">
+                <button class="reset reset-name disabled" disabled>
                     <img src="https://image.flaticon.com/icons/png/512/1828/1828778.png" width="11px">
-                </div>
+                </button>
             </div>
 
             <label for="active-period">Active Period</label>
             <div class="active-period">
                 <input type="text" placeholder="E.g 30 / 60 / 90" id="active-period" required>
-                <div class="reset reset-period disabled">
+                <button class="reset reset-period disabled" disabled>
                     <img src="https://image.flaticon.com/icons/png/512/1828/1828778.png" width="11px">
-                </div>
+                </button>
             </div>
 
             <label for="active-from">Active From</label>
