--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,10 @@
         <header class="container">
             <h1>Acctivate</h1>
 
+            <div class="toggle">
+                <div class="round"></div>
+            </div>
+
             <a href="#" class="stack">What Stack ?</a>
         </header>
 
